# SimpleScript

./: .gitignore  ARCHITECTURE_PLAN.md  LICENSE  PLAN.md  README.md  README.ru.md  diff.patch  diff_parser.txt  ikigaiScriptExpressionImpl.cpp  ikigaiScriptFunctionImpl.hpp
.agents/skills/architecture/: SKILL.md
SimpleScript/: ARCHITECTURE_PLAN.md  CMakeLists.txt  NodeEditor.json  Simple.json  SimpleScript.cpp  scratch_test.py  test_alias.ik  test_script.cpp
SimpleScript/Interpreter/: Main.cpp
SimpleScript/Scenes/: class.json  for.json  func.json  if.json  variable.json
SimpleScript/Tests/: ArraySlicingTests.cpp  BlueprintCodegenTests.cpp  BuiltinsTests.cpp  BytecodeTests.cpp  ClassesTests.cpp  CollectionsTests.cpp  CommentsTests.cpp  ConcurrencyTests.cpp  ControlFlowIfTests.cpp  ControlFlowLoopTests.cpp  ControlFlowMatchTests.cpp  CoroutinesTests.cpp  DecoratorsTests.cpp  DeferTests.cpp  DemoAlgorithmsTests.cpp  ErrorsTests.cpp  ExpressionsTests.cpp  FunctionsTests.cpp  GenericsTests.cpp  LiveVariablesTests.cpp  ModulesTests.cpp  NativeClassTests.cpp  OperatorsArithmeticTests.cpp  OperatorsAssignmentTests.cpp  OperatorsCollectionTests.cpp  OperatorsComparisonTests.cpp  OperatorsLogicalTests.cpp  RangeExpressionsTests.cpp  ResultTests.cpp  SimpleScriptTests.cpp  StringsTests.cpp  TestHelpers.hpp  TransactionTests.cpp  TuplesDestructuringTests.cpp  TuplesTests.cpp  TypesAndVariablesTests.cpp  UnicodeTests.cpp  ValuePoolTests.cpp
SimpleScript/VisualEditor/: Context.cpp  Context.h  Utils.h  VisualCodeEditor.cpp  VisualCodeEditor.h  VisualNodes.cpp  VisualNodes.h  VisualTypes.h  VisualVisitors.cpp  VisualVisitors.h
SimpleScript/VisualEditor/Core/: GraphContext.cpp  GraphContext.hpp  GraphModel.cpp  GraphModel.hpp  GraphTypes.hpp  NodeRegistry.cpp  NodeRegistry.hpp  PinTypes.hpp
SimpleScript/VisualEditor/Mapping/: BpSourceMap.cpp  BpSourceMap.hpp
SimpleScript/VisualEditor/UI/: ImGuiTypes.hpp  NodeDrawer.cpp  NodeDrawer.hpp  NodeEditorSession.cpp  NodeEditorSession.hpp  VisualCodeEditor.cpp  VisualCodeEditor.hpp
SimpleScript/VisualEditor/Visitors/: CodeGenerator.cpp  CodeGenerator.hpp  GraphLoader.cpp  GraphLoader.hpp  GraphSaver.cpp  GraphSaver.hpp  GraphValidator.cpp  GraphValidator.hpp  Visitor.hpp
docs/: LANGUAGE.md  LANGUAGE.ru.md
